fixed overflowing images

--- a/index.css
+++ b/index.css
@@ -163,6 +163,9 @@ h2{
 
 .project-cards img{
     border: 0.5px solid white;
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
 }
 
 #contact{
